--- a/index.html
+++ b/index.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+   
     <div class="container">
         <form>
-            <input placeholder="Ismingiz" type="text" name="year">
-            <button type="sumbit">kiritish</button>
+            <input placeholder="Ismingiz" 
+            type="text" name="ism">
+            <input placeholder="Tug'ilgan yi" 
+            type="number" name="year">
+            <button type="submit">Kiritish</button>
         </form>
         <table width="100%" border="1">
-          <thead>
-            <tr>
-                <th>Ismi</th>
-                <th>Yoshi</th>
-            </tr>
-          </thead>
-        <tbody></tbody>
-    </table>
+            <thead>
+                <tr>
+                    <th>Ismi</th>
+                    <th>Yoshi</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
 
-    
     </div>
-
+  
     <script src="script.js"></script>
 </body>
+
 </html>
+
+<!-- file:///D:/desktop/old/23yangi/index.html? -->
+<!-- file:///D:/about.html? -->
+<!-- file:///D:/about.html?firstname=asdada&about=asdasd+asdasd&viloyat=sam&bdate=2024-02-17&color=%23000000&raqam=20 -->
